* `showBigPalette` has been replaced with `showPalette` and now can show any palette of colors.
* The colors in `bigPalette` have been changed and shuffled to reduce similar colors.
* `clusterMatrix` function now returns cluster matrix with rownames corresponding to sample names.
* New function `plotClusterLegend` that will plot a legend for a clustering.

Bugs:
* Fixed so `diss` now passed to subsampling in calls to clusterSingle/clusterMany
* Fixed so `plotClusters` now will not give incomprehensible error if given duplicates of a color

Changes in version 1.3.8 ( Release date: 2017-10-24)
==============
Changes:
* Updates to documentation

Changes in version 1.3.7 ( Release date: 2017-10-24)
==============
Changes:
* Added function `tableClusters` for tabling clusters by name.
* Added largeDataset option to subsampleClustering
* allow `mergeInfo` to be called in `plotDendrogram` to use stored merge info in plotting.

Bugs:
* Fixed bug in .makeMergeDendrogram in getFeatures 

Changes in version 1.3.6 ( Release date: 2017-10-18)
==============
Changes:
* MAJOR CHANGE TO DEFINITION OF CLASS: Added slots to `ClusterExperiment` object so that the object keeps the information about the merging, and added corresponding helper functions (see documentation). This means previous versions made of a `ClusterExperiment` object will no longer be valid objects! Old, saved objects from previous versions must be manually adapted to have these slots (with `NULL` or `NA` values as appropriate). 
* Add function `plotClustersWorkflow`, see documentation
* Add function `plotDimReduce` for plotting low-dim pca with points labeled by cluster.
* Add function `plotContrastHeatmap` to plot the significant genes that are result of getBestFeatures
* `getBestFeatures`: can now be run on result of mergeClusters without having to call makeDendrogram again for the merged clusters.
* Change argument to `plotClusters` and `plotBarplot` from `clusters` to `object`